# pytorch-voxblox-plus-plus

./: .gitignore  README.md  catkin_init.bash  code_reading.md  dev_setup.sh  install.sh  setup.sh  test_cvmat.py  update_code.sh  voxblox-plusplus_https.rosinstall  voxblox-plusplus_ssh.rosinstall
depth_segmentation/depth_segmentation/cfg/: primesense_config.yaml
depth_segmentation/depth_segmentation/launch/: semantic_depth_segmentation.launch
depth_segmentation/depth_segmentation/src/: depth_segmentation_node.cpp
farthest_sampling/: CMakeLists.txt  package.xml
farthest_sampling/cmake/: DetectCudaArchitectures.cmake
farthest_sampling/include/farthest_sampling/: farthest_sampling.h
farthest_sampling/src/: farthest_sampling.cpp  farthest_sampling.cu
farthest_sampling/test/: test_farthest_sampling.cpp
global_segment_map/: CMakeLists.txt
global_segment_map/include/global_segment_map/: common.h
global_segment_map/include/global_segment_map/utils/: map_utils.h
global_segment_map/src/: label_tsdf_integrator.cc  segment.cc  semantic_instance_label_fusion.cc
global_segment_map_node/: CMakeLists.txt  package.xml
global_segment_map_node/cfg/: multi_robot_scene.yaml
global_segment_map_node/include/global_segment_map_node/: RobotPositionLoader.h  controller.h
global_segment_map_node/launch/: multi_robot_vpp_pipeline.launch  vpp_pipeline.launch
global_segment_map_node/src/: RobotPositionLoader.cpp  controller.cpp
glog_catkin/: CMakeLists.txt  package.xml
gsm_topic_sync/: CMakeLists.txt  package.xml
gsm_topic_sync/include/: GSMTopicSync.h  ImageConvert.h
gsm_topic_sync/launch/: gsm_camera_data_pub.launch
gsm_topic_sync/src/: GSMTopicSync.cpp  GSMTopicSync_node.cpp  ImageConvert.cpp
mask_rcnn_ros/: CMakeLists.txt
mask_rcnn_ros/launch/: mask_rcnn_node.launch
mask_rcnn_ros/scripts/: Detectron2Detector.py  mask_rcnn_node.py  mask_rcnn_test.py  pytorch_mask_rcnn_node.py
mask_rcnn_ros/src/mask_rcnn_ros/: visualize.py
occupancy_grid_publisher/: CMakeLists.txt  package.xml
occupancy_grid_publisher/include/occupancy_grid_publisher/: OccupancyGridPublisher.h  OccupancyGridPublisherServer.h
occupancy_grid_publisher/launch/: OccupancyGridPublisherServer.launch  pub_occupancy_grid.launch
occupancy_grid_publisher/src/: OccupancyGridPublisher.cpp  OccupancyGridPublisherServer.cpp  OccupancyGridPublisher_node.cpp
point_state_manager/: CMakeLists.txt  package.xml
point_state_manager/include/point_state_manager/: PointStateManager.h  PointStateManagerServer.h
point_state_manager/launch/: PointStateManagerServer.launch
point_state_manager/src/: PointStateManager.cpp  PointStateManagerServer.cpp  PointStateManagerServer_node.cpp  try_PointStateManagerServer.cpp
point_state_manager/srv/: PointToState.srv  PointVecToStateVec.srv
pointcloud2_to_object_vec_converter/: CMakeLists.txt  package.xml
pointcloud2_to_object_vec_converter/include/: PointCloud2ToObjectVecConverter.h  PointCloud2ToObjectVecConverterServer.h
pointcloud2_to_object_vec_converter/launch/: PointCloud2ToObjectVecConverterServer.launch
pointcloud2_to_object_vec_converter/msg/: PointCloud2Vec.msg
pointcloud2_to_object_vec_converter/src/: PointCloud2ToObjectVecConverter.cpp  PointCloud2ToObjectVecConverterServer.cpp  PointCloud2ToObjectVecConverterServer_node.cpp  try_PointCloud2ToObjectVecConverterServer.cpp
pointcloud_diff/: CMakeLists.txt  package.xml
pointcloud_diff/launch/: PointCloudDiff.launch
pointcloud_diff/scripts/: MatterPortLoader.py  PointCloudDiff.py
robot_keyboard_controller/: CMakeLists.txt
robot_keyboard_controller/scripts/: RobotKeyboardController.py
robot_position_loader/: CMakeLists.txt
robot_position_loader/include/robot_position_loader/: RobotPositionLoader.h  RobotPositionLoaderServer.h
robot_position_loader/launch/: RobotPositionLoaderServer.launch
robot_position_loader/src/: RobotPositionLoader.cpp  RobotPositionLoaderServer.cpp
robot_position_loader/srv/: GetRobotBBox3DVec.srv
robot_position_visualizer/: CMakeLists.txt  package.xml
robot_position_visualizer/include/robot_position_visualizer/: RobotPositionVisualizer.h
robot_position_visualizer/launch/: RobotPositionVisualizer.launch
robot_position_visualizer/scripts/: RobotPositionVisualizer.py
robot_position_visualizer/src/: RobotPositionVisualizer.cpp  RobotPositionVisualizer_node.cpp
view_point_extractor/: CMakeLists.txt  package.xml
view_point_extractor/include/: EasyPCLVisualizer.h  ViewPointExtractor.h  ViewPointExtractorServer.h  ViewPointSaver.h
view_point_extractor/launch/: ViewPointExtractorServer.launch
view_point_extractor/msg/: ViewPoint.msg  ViewPointVec.msg
view_point_extractor/src/: EasyPCLVisualizer.cpp  ViewPointExtractor.cpp  ViewPointExtractorServer.cpp  ViewPointExtractorServer_node.cpp  ViewPointSaver.cpp  try_ViewPointExtractorServer.cpp
view_point_extractor/srv/: PC2ToViewPointVec.srv
vpp_cv_test/: CMakeLists.txt  package.xml
vpp_cv_test/launch/: VPPCVTest.launch
vpp_cv_test/scripts/: vpp_cv_test.py
