<?xml version="1.0"?>
<package format="2">
  <name>gsm_node</name>
  <version>1.0.0</version>
  <description>Voxblox++ ROS interface</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>
  <author email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</author>
  <author email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>global_segment_map</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>vpp_msgs</depend>
  <depend>robot_position_loader</depend>
  <build_depend>mask_rcnn_ros</build_depend>
  <build_depend>depth_segmentation</build_depend>
  <build_depend>vpp_cv_test</build_depend>

  <build_depend>gsm_topic_sync</build_depend>
  <build_depend>occupancy_grid_publisher</build_depend>
  <build_depend>farthest_sampling</build_depend>
  <build_depend>view_point_extractor</build_depend>
  <build_depend>pointcloud2_to_object_vec_converter</build_depend>
  <build_depend>grnet-detect-ros</build_depend>
  <build_depend>multi-fetch-ros</build_depend>
  <build_depend>robot-manage-ros</build_depend>
  <build_depend>tensorboard-logger-ros</build_depend>
</package>
